


-------------------------------------------------------------------
3.41.0:
-Improved documentation
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.0:
-UX revisions
-Theme CSS consolidation
-Better matching dark theme colors
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.1:
-Auto-install bug fix
-Revised TODO
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.2:
-Bug fix for portfolio summary leverage stats
-Config setting for maximum margin leverage
-UX revisions
-Code cleanup
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.3:
-Another bug fix for portfolio summary leverage stats (newly-introduced)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.4:
-Bug fix for price alert volume change percentage (edge case / UX issue)
-Bug fix for 'BTC worth' text color in dark theme (where base pairing isn't BTC)
-Coding cleanup (semantics)
-Config setting to control the maximum decimals used on coins with USD values under $1 (for cleaner interface / UX)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.43.0:
-Changed Bittrex Intl brand to Bittrex Global
-Added Binance US API support
-CSS Tweaks
-UX on converting keyed exchange names for use in UI
-------------------------------------------------------------------



-------------------------------------------------------------------
3.44.0:
-UX revisions
-------------------------------------------------------------------

























